--- a/lecture-04/lecture-4.tex
+++ b/lecture-04/lecture-4.tex
@@ -309,9 +309,9 @@
 				c_1 & -s_1 & 0 \\
 				s_1 & c_1 & 0 \\
 				0 & 0 & 1
-			\end{matrix} & \text{\LARGE 0} \\
+			\end{matrix} & \text{\Large 0} \\
 		\hdashline[2pt/2pt]
-			\text{\LARGE 0} & \text{\LARGE 1}
+			\text{\Large 0} & \text{\Large 1}
 		\end{array}
 		\right]=
 	\end{align}
