lecture 5 - after lecture

--- a/lecture-04/lecture-4.tex
+++ b/lecture-04/lecture-4.tex
@@ -231,7 +231,7 @@
 		\end{enumerate}
 		\item Step: determine $x_i$ axis, for each case:
 		\begin{enumerate}
-			\item $x_i = z_{i-1} \times Z_i$
+			\item $x_i = z_{i-1} \times z_i$
 			\item b and c: $x_i$ along normal line selected previously
 		\end{enumerate}
 		\item Step: calculate missing axis $y_i$ such the $x_i y_i z_i$ is a right-handed frame
@@ -283,7 +283,7 @@
 	\begin{table}[H]
 		\centering
 		\resizebox{8cm}{!}{
-		\begin{tabular}{|l|c|c|c|c|}
+		\begin{tabular}{|c||c|c|c|c|}
 			\hline
 			& $\theta_i$ & $d_i$ & $a_i$ & $\alpha_i$\\
 			\hline\hline
